# EDA_agent4system

./: .env.example  .gitignore  CLAUDE.md  README.md  THIRD_PARTY.md  pyproject.toml  submission.yaml
configs/: agents.toml  default.toml  resources.toml  tools.toml
configs/algorithms/: a3-search.toml  a3-strategies.toml  a3-toolchain.toml
dooragent/: __init__.py  bootstrap.py  cli.py  errors.py  utils.py
dooragent/agents/: __init__.py  base.py  contracts.py
dooragent/events/: __init__.py  bus.py  envelope.py
dooragent/orchestration/: __init__.py  case_queue.py  exchange.py  gates.py  hooks.py  leases.py  recovery.py  runtime.py  scheduler.py  sessions.py  state_store.py  workflow.py
dooragent/reports/: __init__.py  loader.py
dooragent/runtime/: __init__.py  model_client.py  model_config.py  paths.py  secret_redactor.py
dooragent/tooling/: __init__.py  adapter.py  health.py  manifest.py  registry.py  result.py  runner.py
dooragent/workspace/: __init__.py  manager.py
interfaces/agents/: a1-result.schema.json  a1-task.schema.json  a2-result.schema.json  a2-task.schema.json  a3-result.schema.json  a3-task.schema.json  common-result.schema.json  common-task.schema.json  master-result.schema.json  master-task.schema.json
interfaces/artifacts/: a2-report.schema.json  a3-candidate-result.schema.json  artifact-manifest.schema.json  assertion-candidates.schema.json  candidate-manifest.schema.json  constraints.schema.json  coverage-gap-analysis.schema.json  coverage-model.schema.json  (+27 more)
reference/: README.md
requests/: run.example.json
scripts/: __init__.py
(+242 files in other folders)
